...
            "state": "translated",
            "value": "首次结果"
          }
        }
      }
    },
    "Formal": {
      "localizations": {
        "ja": {
          "stringUnit": {
            "state": "translated",
            "value": "フォーマル"
          }
...
            "state": "translated",
            "value": "正式"
          }
        }
      }
    },
    "History": {
      "localizations": {
        "ja": {
          "stringUnit": {
            "state": "translated",
            "value": "履歴"
          }
...
            "state": "translated",
            "value": "设备端"
          }
        }
      }
    },
    "Open Settings to download voices": {
      "localizations": {
        "ja": {
          "stringUnit": {
            "state": "translated",
            "value": "「設定」を開いて音声をダウンロード"
          }
...
            "state": "translated",
            "value": "请选择一个项目"
          }
        }
      }
    },
    "Settings": {
      "localizations": {
        "ja": {
          "stringUnit": {
            "state": "translated",
            "value": "設定"
          }
...
            "state": "translated",
            "value": "%@ 的语音模型"
          }
        }
      }
    },
    "Speech recognition": {
      "localizations": {
        "ja": {
          "stringUnit": {
            "state": "translated",
            "value": "音声認識"
          }
...
